back to beginning of contact collapse issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -426,6 +426,7 @@ body {
 .wrapper {
   position: relative;
   overflow-x: hidden;
+  height: 8300px;
 }
 
 .nav {
@@ -434,22 +435,6 @@ body {
 
 .margin {
   height: 940px;
-}
-
-.spacer {
-  height: 200px;
-  margin-top: 5000px;
-}
-@media (min-width: 600px) {
-  .spacer {
-    margin-top: 4700px;
-  }
-}
-@media (min-width: 1200px) {
-  .spacer {
-    height: 5px;
-    margin-top: 2400px;
-  }
 }
 
 @keyframes fadeIn {
