--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -29,6 +29,10 @@ body {
 .wrapper {
     position: relative;
     overflow-x: hidden;
+    // this is what causes the double scroll-bar.  The contact section still is being pushed by 
+    // this element or something above it upon media query. 
+    //adding height 100% or having no height parameter set (as it was previously), is what causes the issue.
+    height: 8300px;
 }
 
 .nav {
@@ -42,35 +46,15 @@ body {
 }
 
 
-.spacer {
-    height:200px;
-    margin-top: 5000px;
-    @include for-size(tablet){
-        margin-top: 4700px;
-    }
-    @include for-size(desktop){
-        height:5px;
-        margin-top: 2400px;
-    }
+// .spacer {
+//     height:200px;
+//     margin-top: 5000px;
+//     @include for-size(tablet){
+//         margin-top: 4700px;
+//     }
+//     @include for-size(desktop){
+//         height:5px;
+//         margin-top: 2400px;
+//     }
     
-
-    // I have tried fixing these media queries with more custom screen sizes.  
-    // Yet this seems to only make it have more of a seisure : )
-
-    // @media only screen and (min-width: 600px) {
-    //     margin-top: 5000px;
-    //   }
-
-    //   @media only screen and (min-width: 667px) {
-    //     margin-top: 4400px;
-    // }
-
-    // @media only screen and (min-width: 710px) {
-    //     margin-top: 4000px;
-    // }
-
-    // @media only screen and (min-width: 1200px){
-    //     margin-top: 2600px;
-    // }
-    
-}
+// }
